@@ -7,6 +7,8 @@ sunuo (0.2.4) unstable; urgency=low
   * moved main BaseDirectory declaration to Config
   * configure config file and base directory on the command line
   * command line arguments are no longer case insensitive
+  * added directories to Config:
+    - ConfigDirectory = BaseDirectory + "/Data"
 
  --
 
